--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@ body {
 	flex-flow: row nowrap;
 	margin: 0;
 	padding: 0;
+	font-family: sans-serif;
 }
 
 #main {
@@ -29,7 +30,8 @@ body {
 
 #meta {
 	width: 100%;
-	height: 100vmin;
+	height: auto;
+	max-height: 100vmin;
 	overflow: auto;
 	padding: 1rem;
 
@@ -62,6 +64,34 @@ pre {
 	white-space: -pre-wrap;      /* Opera 4-6 */
 	white-space: -o-pre-wrap;    /* Opera 7 */
 	word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+.tweet {
+	border: 1px solid black;
+	padding: .5rem;
+	margin-bottom: 1rem;
+
+	span {
+		font-size: 80%;
+		font-weight: 700;
+	}
+
+	p {
+		padding-top: .25rem;
+		margin: 0;
+	}
+}
+
+.parent {
+	margin-left: 0rem;
+}
+
+.parent + .element {
+	margin-left: 1rem;
+}
+
+.element ~ .child {
+	margin-left: 2rem;
 }
 
 .node text {
